--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=bs4wwksa5w7gp4zs9vfl-mysql.services.clever-cloud.com
-DB_USER=ubriovf6od33gpld
-DB_PASS=72SOFBTJ6g5wJBX9Rm7F
-DB_NAME=bs4wwksa5w7gp4zs9vfl
+DB_HOST=sql300.infinityfree.com
+DB_USER=if0_38438315
+DB_PASS=FkJNNRwK3WGlzp
+DB_NAME=if0_38438315_reviewdb
 DB_PORT=3306
